# todo_async

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
auth/api/v1/: __init__.py
auth/api/v1/authentication/: routes.py
auth/api/v1/registeration/: routes.py  schemas.py
auth/authorization/: __init__.py  schema.py  token.py
auth/exceptions/: __init__.py  auth.py
auth/models/: user.py
auth/repository/bll/: __init__.py  auth_service.py
auth/repository/dal/: __init__.py  auth_queryset.py  interface.py
configs/logging/: logging.toml
database/: core.py
docs/: settings-template.toml
kernel/: application.py
kernel/settings/: __init__.py  auth.py  base.py  database.py  logging.py
tasks/api/v1/: __init__.py  routes.py  schemas.py
tasks/models/: task.py
tasks/repository/bll/: task_service.py
tasks/repository/dal/: __init__.py  interface.py  task_queryset.py
utils/: config_parser.py  funcs.py  hash.py
