[tool.poetry]
name = "twt-followers"
version = "0.1.0"
description = ""
authors = ["soheil alimadadi <soheilblizzard@gmail.com>"]
readme = "README.md"
packages = [{include = "twt_followers"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
beanie = "^1.20.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
email-validator = "^2.0.0.post2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
